# bdo_v41

./: .breakpoints  .gitignore  app.py  db_backup.py  db_init.sh  db_init_load_data.py  db_restore.py  func.py  func_1.py  func_ktg_data_start.py  pyproject.toml  readme.md  start.sh  temp_excel.py  test.py  test_excel.py
functions/: age_calc.py  backup_restore_bd.py  calendar_operation_status_calc.py  delete_records_from_eo_master_data.py  eo_calendar_status.py  eo_data_calculation.py  generate_eo_diagram_data.py  generate_excel_add_candidates.py  generate_excel_calendar_status_eo.py  generate_excel_conflicts.py  generate_excel_master_eo.py  generate_excel_model_eo.py  import_eo_class_data.py  import_model_data.py  import_operation_status.py  import_sap_eo_data.py  iteration_test.py  ktg_data.py  read_be_eo_xlsx_file.py  read_be_eo_xlsx_file_v2.py  read_be_eo_xlsx_file_v3.py  read_be_eo_xlsx_file_v4.py  read_be_eo_xlsx_file_v5.py  read_be_eo_xlsx_file_v6_slide_1.py  read_delete_eo_xlsx_file.py  read_eo_models_xlsx_file.py  read_sap_eo_xlsx_file.py  read_update_eo_data_xlsx_file.py
initial_values/: initial_values.py
migrations/versions/: 03c2444ba998_new_fields_finish_data_in_eo_model.py  07017e254730_models.py  0c0610c7ddc7_init.py  15753ca6d610_sap_model_name.py  1975e858f637_new_field.py  1b298da3678a_sap_finish_data.py  1b638ea3c377_init.py  2c820c121a96_migrate.py  318183f18738_init.py  35856df5297b_init.py  3972d87653e3_evaluated_finish_date.py  3fc899108b93_init.py  4bd918731789_init.py  (+24 more)
models/: models.py
routes/: routes.py
templates/: base.html  home.html
